syntax = "proto3";
package com.coralogixapis.alerting.alert_scheduler_rule_protobuf.v1;
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/alert_scheduler_rule.proto";
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/active_timeframe.proto";

message GetAlertSchedulerRuleRequest {
  string alert_scheduler_rule_id = 1;
}

message CreateAlertSchedulerRuleRequest {
  AlertSchedulerRule alert_scheduler_rule = 1;
}

message UpdateAlertSchedulerRuleRequest {
  AlertSchedulerRule alert_scheduler_rule = 1;
}

message DeleteAlertSchedulerRuleRequest {
  string alert_scheduler_rule_id = 1;
}

message AlertSchedulerRuleIds {
  repeated string alert_scheduler_rule_ids = 1;
}

message AlertSchedulerRuleVersionIds {
  repeated string alert_scheduler_rule_version_ids = 1;
}

message FilterByAlertSchedulerRuleIds {
  oneof alert_scheduler_rule_ids {
    AlertSchedulerRuleIds alert_scheduler_ids = 3;
    AlertSchedulerRuleVersionIds alert_scheduler_version_ids = 4;
  }
}

message GetBulkAlertSchedulerRuleRequest {
  ActiveTimeframe active_timeframe = 1;
  optional bool enabled = 2;
  FilterByAlertSchedulerRuleIds alert_scheduler_rules_ids = 3;
  optional string next_page_token = 15;
}

message CreateBulkAlertSchedulerRuleRequest {
  repeated CreateAlertSchedulerRuleRequest create_alert_scheduler_rule_requests = 1;
}

message UpdateBulkAlertSchedulerRuleRequest {
  repeated UpdateAlertSchedulerRuleRequest update_alert_scheduler_rule_requests = 1;
}

message DeleteBulkAlertSchedulerRuleRequest {
  repeated DeleteAlertSchedulerRuleRequest delete_alert_scheduler_rule_requests = 1;
}