syntax = "proto3";
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/alert_scheduler_request.proto";
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/alert_scheduler_response.proto";
package com.coralogixapis.alerting.alert_scheduler_rule_protobuf.v1;



service AlertSchedulerRuleService {
  rpc GetAlertSchedulerRule(GetAlertSchedulerRuleRequest) returns (GetAlertSchedulerRuleResponse) {}
  rpc CreateAlertSchedulerRule(CreateAlertSchedulerRuleRequest) returns (CreateAlertSchedulerRuleResponse) {}
  rpc UpdateAlertSchedulerRule(UpdateAlertSchedulerRuleRequest) returns (UpdateAlertSchedulerRuleResponse) {}
  rpc DeleteAlertSchedulerRule(DeleteAlertSchedulerRuleRequest) returns (DeleteAlertSchedulerRuleResponse) {}
  rpc GetBulkAlertSchedulerRule(GetBulkAlertSchedulerRuleRequest) returns (GetBulkAlertSchedulerRuleResponse) {}
  rpc CreateBulkAlertSchedulerRule(CreateBulkAlertSchedulerRuleRequest) returns (CreateBulkAlertSchedulerRuleResponse) {}
  rpc UpdateBulkAlertSchedulerRule(UpdateBulkAlertSchedulerRuleRequest) returns (UpdateBulkAlertSchedulerRuleResponse) {}
}