syntax = "proto3";

package com.coralogixapis.dashboards.v1.common;

import "google/protobuf/timestamp.proto";

message TimeFrame {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}
